<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_tickle</name>
  <version>0.0.1</version>
  <description>ROS2 RMW implementation using TickLE middleware</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmw</depend>
  <depend>rcutils</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_typesupport_interface</depend>
  <depend>rosidl_typesupport_c</depend>
  <depend>rosidl_typesupport_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
